force-app/main/default/objects/geopointe__GP_Calendar_Object__c/geopointe__GP_Calendar_Object__c.object-meta.xml
<CustomObject>
    <description>Configuration settings for determining what Salesforce Objects can be used in the Geopointe Calendar. Events, Store Visits, etc.</description>
    <label>Geopointe Calendar Object</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Calendar Object</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>