force-app/main/default/objects/geopointe__GP_Calendar_Object__c/fields/geopointe__Create_Form__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Create_Form__c</fullName>
    <label>Create Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fast Create</fullName>
                <default>true</default>
                <label>Fast Create</label>
            </value>
            <value>
                <fullName>Page Layout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>