force-app/main/default/objects/geopointe__GP_Calendar_Object__c/fields/geopointe__Default_Field_Values__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Default_Field_Values__c</fullName>
    <label>Default Field Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>