force-app/main/default/objects/geopointe__GP_Calendar_Object__c/fields/geopointe__Duration_Field__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Duration_Field__c</fullName>
    <description>The API field name of the field that represents the Duration of a calendar event.</description>
    <label>Duration Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>