force-app/main/default/objects/geopointe__GP_Calendar_Object__c/fields/geopointe__Duration_Units__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Duration_Units__c</fullName>
    <description>Specifies the units of the Duration field.</description>
    <label>Duration Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>