force-app/main/default/objects/geopointe__GP_Calendar_Object__c/fields/geopointe__End_Time_Field__c.field-meta.xml
<CustomField>
    <fullName>geopointe__End_Time_Field__c</fullName>
    <description>The API field name of the End Time field.</description>
    <label>End Time Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>