force-app/main/default/objects/geopointe__GP_Calendar_Object__c/fields/geopointe__Exclude_Calendar_Route_Field__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Exclude_Calendar_Route_Field__c</fullName>
    <description>The API field name of the Exclude Calendar Route field.</description>
    <label>Subject Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>