force-app/main/default/objects/geopointe__GP_Calendar_Object__c/fields/geopointe__Is_All_Day_Field__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Is_All_Day_Field__c</fullName>
    <description>Indicates if a calendar item is for an entire day.</description>
    <label>Is All Day Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>