force-app/main/default/objects/geopointe__GP_Calendar_Object__c/fields/geopointe__SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>geopointe__SObject_Name__c</fullName>
    <description>Salesforce Object API name of the object that represents a calendar event. Event, Store_Visit__c, etc.</description>
    <label>SObject Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>