force-app/main/default/objects/geopointe__GP_Calendar_Object__c/fields/geopointe__User_Field__c.field-meta.xml
<CustomField>
    <fullName>geopointe__User_Field__c</fullName>
    <description>The API field name of the field which represents user associated to the calendar event. Could be Owner or other User Lookup field.</description>
    <label>User Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>